generated README (WIP), docker-compose implemented, cleanup